<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/spacing_unit_normal"
  android:background="@color/colorSurface">

  <TextView
    android:id="@+id/review_dialog_title"
    android:textStyle="bold"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/review"
    android:textColor="@color/colorOnSurfaceHighEmphasis"
    android:textSize="20sp"
    app:layout_constraintBottom_toTopOf="@id/review_dialog_divider"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <View
    android:id="@+id/review_dialog_divider"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:layout_marginTop="@dimen/spacing_unit_narrow"
    android:background="@color/colorMiddleground"
    app:layout_constraintBottom_toTopOf="@id/review_dialog_rating_bar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/review_dialog_title"/>

  <RatingBar
    android:id="@+id/review_dialog_rating_bar"
    style="@style/Widget.AppCompat.RatingBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_unit_normal"
    android:numStars="5"
    android:stepSize="1"
    app:layout_constraintBottom_toTopOf="@id/review_dialog_contents"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/review_dialog_divider"/>

  <EditText
    android:id="@+id/review_dialog_contents"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_unit_normal"
    android:background="@drawable/bg_review_dialog_contents"
    android:gravity="top"
    android:hint="@string/msg_make_review_suggestion"
    android:maxLines="4"
    android:minLines="4"
    android:textColor="@color/colorOnSurfaceHighEmphasis"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/review_dialog_rating_bar"/>

  <Button
    android:id="@+id/review_dialog_dismiss_button"
    style="@style/Widget.AppCompat.Button.Borderless"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_unit_normal"
    android:text="@string/cancel"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/review_dialog_contents"/>

  <Button
    android:id="@+id/review_dialog_submit_button"
    style="@style/Widget.AppCompat.Button.Borderless"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_unit_normal"
    android:text="@string/complete_review"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/review_dialog_contents"/>
</android.support.constraint.ConstraintLayout>