<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:focusable="true"
  android:focusableInTouchMode="true"
  tools:context=".ui.main.profile.modify.ModifyProfileActivity">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/modify_profile_app_bar_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_app_bar"
    app:elevation="0dp"
    app:layout_constraintBottom_toTopOf="@id/modify_profile_scrollview"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/app_bar_height">

      <ImageButton
        android:id="@+id/modify_profile_back_button"
        style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingStart="@dimen/spacing_unit_narrow"
        android:paddingEnd="@dimen/spacing_unit_narrow"
        android:src="@drawable/ic_back_black_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

      <TextView
        android:id="@+id/modify_profile_title"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/modify_profile"
        android:textColor="@color/colorOnBackgroundHighEmphasis"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

      <Button
        android:id="@+id/modify_profile_complete_button"
        style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingStart="@dimen/spacing_unit_narrow"
        android:paddingEnd="@dimen/spacing_unit_narrow"
        android:text="@string/complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

      <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/modify_profile_complete_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@id/modify_profile_complete_button"
        app:layout_constraintEnd_toEndOf="@id/modify_profile_complete_button"
        app:layout_constraintStart_toStartOf="@id/modify_profile_complete_button"
        app:layout_constraintTop_toTopOf="@id/modify_profile_complete_button"/>
    </android.support.constraint.ConstraintLayout>
  </android.support.design.widget.AppBarLayout>

  <ScrollView
    android:id="@+id/modify_profile_scrollview"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@id/modify_profile_signout_divider"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/modify_profile_app_bar_layout">

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/modify_profile_photo"
        android:layout_width="@dimen/profile_photo"
        android:layout_height="@dimen/profile_photo"
        android:layout_marginTop="@dimen/spacing_unit_very_wide"
        android:layout_marginBottom="@dimen/spacing_unit_narrow"
        app:layout_constraintBottom_toTopOf="@id/modify_profile_change_photo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true"/>

      <Button
        android:id="@+id/modify_profile_change_photo_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_unit_narrow"
        android:text="@string/change_profile_photo"
        android:textColor="@color/colorOnBackgroundMediumEmphasis"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/modify_profile_information_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modify_profile_photo"/>

      <TextView
        android:id="@+id/modify_profile_information_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_unit_wide"
        android:background="@drawable/bg_label"
        android:text="@string/profile_information"
        android:textColor="@color/colorOnSurfaceMediumEmphasis"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/modify_profile_display_name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modify_profile_change_photo_button"/>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/modify_profile_display_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_unit_normal"
        android:paddingBottom="@dimen/spacing_unit_normal"
        android:paddingStart="@dimen/spacing_unit_wide"
        android:paddingEnd="@dimen/spacing_unit_wide"
        app:layout_constraintBottom_toTopOf="@id/modify_profile_account_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modify_profile_information_label">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/modify_profile_display_name_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/display_name"
          android:textColor="@color/colorOnSurfaceHighEmphasis"
          android:textSize="14sp"/>
      </android.support.design.widget.TextInputLayout>

      <TextView
        android:id="@+id/modify_profile_account_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_label"
        android:text="@string/account_information"
        android:textColor="@color/colorOnSurfaceMediumEmphasis"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/modify_profile_email_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modify_profile_display_name_layout"/>

      <TextView
        android:id="@+id/modify_profile_email_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_unit_normal"
        android:paddingStart="@dimen/spacing_unit_wide"
        android:paddingEnd="@dimen/spacing_unit_wide"
        android:text="@string/email"
        android:textColor="@color/colorOnSurfaceMediumEmphasis"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/modify_profile_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modify_profile_account_label"/>

      <TextView
        android:id="@+id/modify_profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_unit_very_narrow"
        android:paddingBottom="@dimen/spacing_unit_normal"
        android:paddingStart="@dimen/spacing_unit_wide"
        android:paddingEnd="@dimen/spacing_unit_wide"
        android:text="@string/msg_loading"
        android:textColor="@color/colorOnSurfaceHighEmphasis"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modify_profile_email_label"/>
    </android.support.constraint.ConstraintLayout>
  </ScrollView>

  <View
    android:id="@+id/modify_profile_signout_divider"
    android:layout_width="0dp"
    android:layout_height="0.1dp"
    android:background="@color/colorStroke"
    app:layout_constraintBottom_toTopOf="@id/modify_profile_signout_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/modify_profile_scrollview"/>

  <Button
    android:id="@+id/modify_profile_signout_button"
    style="@style/Widget.AppCompat.Button.Borderless"
    android:layout_width="0dp"
    android:layout_height="@dimen/bottom_navigation_height"
    android:text="@string/signout"
    android:textColor="@color/colorOnSurfaceHighEmphasis"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/modify_profile_signout_divider"/>
</android.support.constraint.ConstraintLayout>