<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorSurface"
  tools:context=".ui.main.profile.ProfileFragment">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/profile_app_bar_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_app_bar"
    app:elevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/app_bar_height">

      <TextView
        android:id="@+id/profile_title"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/msg_loading"
        android:textColor="@color/colorOnBackgroundHighEmphasis"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>
  </android.support.design.widget.AppBarLayout>

  <com.makeramen.roundedimageview.RoundedImageView
    android:id="@+id/profile_photo"
    android:layout_width="@dimen/profile_photo_thumbnail"
    android:layout_height="@dimen/profile_photo_thumbnail"
    android:layout_margin="@dimen/spacing_unit_normal"
    app:layout_constraintBottom_toTopOf="@id/profile_viewpager"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/profile_app_bar_layout"
    app:riv_oval="true"/>

  <TextView
    android:id="@+id/profile_email_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_unit_normal"
    android:layout_marginEnd="@dimen/spacing_unit_normal"
    android:text="@string/signin"
    android:textColor="@color/colorOnBackgroundMediumEmphasis"
    android:textSize="12sp"
    app:layout_constraintBaseline_toBaselineOf="@id/profile_email"
    app:layout_constraintBottom_toTopOf="@id/profile_modify_button"
    app:layout_constraintEnd_toStartOf="@id/profile_email"
    app:layout_constraintStart_toEndOf="@id/profile_photo"
    app:layout_constraintTop_toBottomOf="@id/profile_app_bar_layout"/>

  <TextView
    android:id="@+id/profile_email"
    android:textStyle="bold"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:textColor="@color/colorOnBackgroundHighEmphasis"
    android:textSize="14sp"
    app:layout_constraintBottom_toTopOf="@id/profile_modify_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/profile_email_label"
    app:layout_constraintTop_toBottomOf="@id/profile_app_bar_layout"
    app:layout_constraintVertical_chainStyle="packed"/>

  <Button
    android:id="@+id/profile_modify_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_unit_very_narrow"
    android:layout_marginStart="@dimen/spacing_unit_normal"
    android:layout_marginEnd="@dimen/spacing_unit_normal"
    android:background="@drawable/bg_border_button"
    android:text="@string/modify_profile"
    android:textColor="@color/colorOnBackgroundHighEmphasis"
    android:textSize="12sp"
    app:layout_constraintBottom_toTopOf="@id/profile_viewpager"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/profile_photo"
    app:layout_constraintTop_toBottomOf="@id/profile_email"/>

  <android.support.v4.view.ViewPager
    android:id="@+id/profile_viewpager"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/profile_photo">

    <android.support.design.widget.TabLayout
      android:id="@+id/profile_tablayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_tab"
      app:elevation="4dp"
      app:tabIndicatorColor="@color/colorPrimary"/>
  </android.support.v4.view.ViewPager>
</android.support.constraint.ConstraintLayout>